--- a/Chrome Extention/clockext/Clock.css
+++ b/Chrome Extention/clockext/Clock.css
@@ -8,16 +8,19 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 50vh;
     background: #2f363e;
-    
+    margin: 10px;
+    padding: 10px;
 }
 
 .container {
-    position: relative;
-    width: 50%;
-    height: 50%;
+margin: auto;
 
+    position: relative;
+    width: 25%;
+    height: 25%;
+margin-left:-5px ;
 
 }
 
@@ -68,7 +71,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    }
+}
 
 .circle i{
     position: absolute;
