--- a/Clock/Clock.css
+++ b/Clock/Clock.css
@@ -68,6 +68,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: flex-start;
+    border: 2px solid gray;
+    border-radius: 50%;
+    opacity: 0.5;
     }
 
 .circle i{
